--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ a:hover {
   min-height: 30px;
   padding: 10px;
   position: fixed;
+  z-index: 2;
   text-align: center;
 }
 .nav {
@@ -46,7 +47,7 @@ a:hover {
     color: white;
 }
 .nav li {
-  padding: 5px 10px 10px 10px;
+  padding: 10px;
 }
 .nav a {
   transition: all .5s;
@@ -67,12 +68,30 @@ header {
 }
 header .profile-image {
   margin-top: 50px;
+  margin-bottom: 2em;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
+  border-radius: 10% 30%;
   border: 3px solid white;
   transition: all .5s;
 }
+
+header .atl-images {
+  margin: 1em 2.5em 2em;
+  width: 30%;
+  min-width: 200px;
+  min-height: 150px;
+  border-radius: 10%;
+  border: 3px dotted black;
+}
+
+header .rotate{
+  transform: rotate(180deg);
+  position: relative;
+  z-index: 1;
+
+}
+
 header .profile-image:hover {
   transform: scale(1.2) rotate(5deg);
 }
